# climap

./: .coveragerc  .pre-commit-config.yaml  404.html  README.md  SECURITY.md  auto_doc_generator.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: poetry_publish.yml  test_and_coverage.yml
climap/: __version__.py  _client.py  _commandline.py  _config.py  _console.py  _footer.py  _header.py  _initialiser.py  _layout.py  _mailboxes.py  _meta.py  _themes.py  _types.py  _version.py  main.py
docs/: index.md
reference/SUMMARY/: index.html
reference/__version__/: index.html
reference/_client/: index.html
reference/_config/: index.html
reference/_console/: index.html
reference/_exceptions/: index.html
reference/_imap/: index.html
reference/_layout/: index.html
reference/_themes/: index.html
reference/_types/: index.html
reference/main/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py
