[tool.poetry]
name = "climap"
version = "0.1.0"
description = "A rich command line utility for accessing emails"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.3.1"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
