[tool.poetry]
name = "climap"
version = "0.1.0"
description = "A rich command line utility for accessing emails"
authors = ["symonk <jackofspaces@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.3.1"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.4.5"
pre-commit = "^3.0.4"
codecov = "^2.1.12"
coverage = "^7.1.0"
towncrier = "^22.12.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocstrings = "^0.20.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"


[tool.poetry.scripts]
climap = 'climap.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"